# datapack

./: .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.py
.cursor/rules/: datapack.mdc
ai/: README.md  __init__.py  agents.py  extractors.py  models.py  prompts.py  requirements.txt
datapack/: __init__.py  cli.py
datapack/ai/: README.md  __init__.py  agents.py  dependencies.py  extractors.py  models.py  prompts.py  structured_output.py  tools.py
datapack/cli/: __init__.py  ai.py  converters.py  utils.py
datapack/converters/: README.md  __init__.py  api_converter.py  csv_converter.py  docx_converter.py  email_converter.py  examples.py  html_converter.py  json_converter.py  markdown_converter.py  notebook_converter.py  pdf_converter.py  sql_converter.py  test_converters.py  utils.py  xml_converter.py  yaml_converter.py
datapack/mcp/: README.md  __init__.py  client.py  server.py
datapack/mdp/: README.md  __init__.py  collection.py  converter.py  core.py  document.py  metadata.py  utils.py
datapack/tests/: README.md  test_converters.py  test_core.py  test_metadata_extraction.py  test_relationships.py  test_user_friendly_api.py
datapack/tests/data/: sample.txt
datapack/workflows/: README.md  __init__.py  ai_processing.py  content.py  dev.py  examples.py  releases.py
docs/: index.md  installation.md  introduction.md  mdp_format.md  quick-start.md  why.md
docs/api/: index.md  mdp.md
docs/cli/: index.md
docs/concepts/: context-relationships.md  document-processing.md  index.md  metadata-annotations.md
docs/examples/: cli_examples.sh  collection_creation_demo.py  converter_examples.py  index.md
docs/examples/basic/: document-parsing.md  simple-document.md
docs/examples/basic/mdp/: example.mdp  modified_example.mdp  programmatic_example.mdp  usage_example.py
docs/examples/context/: context_example.mdp  mdp_context_example.py
docs/examples/mcp/: official_mcp.py
docs/examples/mdp/: user_friendly_api.md  user_friendly_api.py
docs/examples/metadata/: custom-metadata.md  custom_fields_example.mdp  mdp_advanced_metadata_example.py  mdp_metadata_example.py  standard-metadata.md  standard_metadata_example.mdp
docs/examples/relationships/: document_relationships.py
docs/integration/: index.md
docs/user-guide/: advanced-features.md  basic-usage.md  best-practices.md  security-sharing.md
